@startuml

class Sentence {
    -sentence: String
    +getSentence(): String
    +setSentence(text: String): void
    +addToken(token: String): void
}

class Dictionary {
    -names: List<Name>
    -verbs: List<Verb>
    -adjs: List<Adjective>
    +getName(): Name
    +getVerb(): Verb
    +getAdj(): Adjective
    -chooseToken(tokens: List<Token>): Token
}

class Templates {
    -templatesList: List<Template>
    +chooseTemplate(): Template
    +fillTemplate(template: Template, names: List<Name>, 
                 verbs: List<Verb>, adj: List<Adjective>): Sentence
}

class Template {
    -content: List<Object>
    -namesNumber: int
    -verbsNumber: int
    -adjNumber: int
    +Template(content: List<Object>)
    +getNames(): int
    +getAdj(): int
    +getVerbs(): int
    +getTemplate(): Template
}

class Analyzer {
    +getAnalyses(sentenceIn: Sentence): List<Token>
}

class Token {
    -token: String
    +getToken(): String
    +setToken(s: String): void
}

class Name extends Token {}
class Adjective extends Token {}
class Verb extends Token {
    -regular: boolean
    +isRegular(): boolean
}

class Moderator {
    +analyzeToxicity(sentence: String): boolean
}

class Generator {
    +countMissingTokens(template: Template, tokens: List<Token>): int
}

' Relationships
Dictionary "1" *-- "*" Token
Templates "1" *-- "*" Template
Template "1" o-- "*" Token
Generator -- Template
Generator -- Token
Sentence -- Generator
Moderator -- Sentence
Analyzer -- Sentence

@enduml